--- a/_includes/common/header.html
+++ b/_includes/common/header.html
@@ -8,8 +8,12 @@
         <i class="fa fa-bars"></i>
       </button>
 
-      {% assign indexPage=site.pages | where:"ref", "index" | where:"lang", page.lang %}
-      <a class="navbar-brand" href="{{ indexPage.url }}">State of the Map Latam 2024</a>
+
+      {% if page.lang == 'es' %}
+      <a class="navbar-brand" href="{{ site.baseurl }}/">State of the Map Latam 2024</a>
+      {% else %}
+      <a class="navbar-brand" href="{{ site.baseurl }}/{{ page.lang }}">State of the Map Latam 2024</a>
+      {% endif %}
     </div>
 
     <div id="sotm-navbar-collapse-1" class="collapse navbar-collapse">
