Add svg logo to the intro

--- a/_includes/home/intro.html
+++ b/_includes/home/intro.html
@@ -5,7 +5,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
-          <img src="/assets/images/logo_sotm_latam.jpg" class="intro-logo" alt="State of the Map Latam 2024 Logo">
+          <img src="/assets/images/logo-sotm-latam-2024.svg" class="intro-logo" alt="State of the Map Latam 2024 Logo">
 
           <div class="intro-headline">{{ t.intro_section.headline }}</div>
           <div class="intro-dates">{{ t.intro_section.dates }}</div>
