--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -54,7 +54,7 @@ body {
   isolation: isolate; 
 
   .intro-logo {
-    width: 33vw; /* Set the width to one third of the viewport width */
+    width: 25vw; 
     max-width: 100%; /* Ensure it doesn't exceed the container width */
     height: auto; /* Maintain the aspect ratio */
   }
