--- a/_includes/home/sponsors.html
+++ b/_includes/home/sponsors.html
@@ -2,6 +2,9 @@
 {% assign contact_url = site.contact_form_url[page.lang] %}
 
 <section id="sponsors" class="container content-section text-center">
+
   <h1>{{ t.sponsors_title }}</h1>
   <p>{{ t.sponsors_description }}</p>
+  <a target="_blank" href="{{ site.baseurl }}/assets/documents/sotm-latam-2024-sponsor-brochure-{{ page.lang }}.pdf"
+    class="btn btn-default">{{ t.brochure_button }}</a>
 </section>
