--- a/_includes/home/sponsors.html
+++ b/_includes/home/sponsors.html
@@ -3,7 +3,11 @@
 
 <section id="sponsors" class="container content-section text-center">
 
-  <h1>{{ t.sponsors_title }}</h1>
+  <h2>
+    <a href="#sponsors">
+      {{ t.sponsors_title }}
+    </a>
+  </h2>
   <p>{{ t.sponsors_description }}</p>
   <a target="_blank" href="{{ site.baseurl }}/assets/documents/sotm-latam-2024-sponsor-brochure-{{ page.lang }}.pdf"
     class="btn btn-default">{{ t.brochure_button }}</a>
