Change state to CFP open

--- a/_includes/home/intro.html
+++ b/_includes/home/intro.html
@@ -22,7 +22,7 @@
             </span>
             {% if site.program.stage == 'call-for-proposals-open' %}
             <span class="col-xs-12 col-sm-4 btn-item">
-              <a target="_blank" class="btn btn-default" href="{{ site.program.proposals.url }}" role="button">{{
+              <a target="_blank" class="btn btn-default" href="{{ site.program.url }}" role="button">{{
                 t.intro_section.submit_proposal }}</a>
             </span>
             {% elsif site.program.stage == 'program-is-ready' %}
