responsive sponsor logos

--- a/_includes/home/sponsors.html
+++ b/_includes/home/sponsors.html
@@ -48,6 +48,10 @@
     .sponsor-row img {
       margin: 1px;
       margin-right: 20px;
+      width: auto;
+      max-height: 100%;
     }
+
+
   </style>
 </section>
