--- a/_includes/common/footer.html
+++ b/_includes/common/footer.html
@@ -42,21 +42,22 @@
     // Define the HTML content for the popup with better organization
     var popupContent = `
       <div style="color: black;">
-        <strong>IFPA - Instituto Federal do Pará</strong><br>
-        Avenida Almirante Barroso, nº 1155, Marco<br>
+        <strong>Palacete Pinho</strong><br>
+        Rua Doutor Assis, 586<br>
+        Cidade Velha<br>
         Belém, PA<br>
         Brazil<br>
         <br>
-        <a href="https://www.openstreetmap.org/way/537204680" target="_blank">
+        <a href="https://www.openstreetmap.org/way/427310787" target="_blank">
           <i class="fa fa-map-marker"></i> OpenStreetMap
         </a><br>
-        <a href="https://maps.apple.com/?q=IFPA, Avenida Almirante Barroso, 1155, Marco, Belém, PA, Brazil" target="_blank">
+        <a href="https://maps.apple.com/?q=Rua Doutor Assis, 586, Belém, PA, Brazil" target="_blank">
           <i class="fa fa-map-marker"></i> Apple Maps
         </a><br>
-        <a href="https://www.google.com/maps/search/?api=1&query=IFPA, Avenida Almirante Barroso, 1155, Marco, Belém, PA, Brazil" target="_blank">
+        <a href="https://www.google.com/maps/search/?api=1&query=Rua Doutor Assis, 586, Belém, PA, Brazil" target="_blank">
           <i class="fa fa-map-marker"></i> Google Maps
         </a><br>
-        <a href="https://waze.com/ul?q=IFPA, Avenida Almirante Barroso, 1155, Marco, Belém, PA, Brazil" target="_blank">
+        <a href="https://waze.com/ul?q=Rua Doutor Assis, 586, Belém, PA, Brazil" target="_blank">
           <i class="fa fa-map-marker"></i> Waze
         </a>
       </div>
