--- a/_includes/common/footer.html
+++ b/_includes/common/footer.html
@@ -43,7 +43,7 @@
     var popupContent = `
       <div style="color: black;">
         <strong>Palacete Pinho</strong><br>
-        Rua Doutor Assis, 586<br>
+        Rua São Boaventura, 586<br>
         Cidade Velha<br>
         Belém, PA<br>
         Brazil<br>
@@ -51,13 +51,13 @@
         <a href="https://www.openstreetmap.org/way/427310787" target="_blank">
           <i class="fa fa-map-marker"></i> OpenStreetMap
         </a><br>
-        <a href="https://maps.apple.com/?q=Rua Doutor Assis, 586, Belém, PA, Brazil" target="_blank">
+        <a href="https://maps.apple.com/?q=Rua São Boaventura, 586, Belém, PA, Brazil" target="_blank">
           <i class="fa fa-map-marker"></i> Apple Maps
         </a><br>
-        <a href="https://www.google.com/maps/search/?api=1&query=Rua Doutor Assis, 586, Belém, PA, Brazil" target="_blank">
+        <a href="https://www.google.com/maps/search/?api=1&query=Rua São Boaventura, 586, Belém, PA, Brazil" target="_blank">
           <i class="fa fa-map-marker"></i> Google Maps
         </a><br>
-        <a href="https://waze.com/ul?q=Rua Doutor Assis, 586, Belém, PA, Brazil" target="_blank">
+        <a href="https://waze.com/ul?q=Rua São Boaventura, 586, Belém, PA, Brazil" target="_blank">
           <i class="fa fa-map-marker"></i> Waze
         </a>
       </div>
